// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a player´s attribute (speed) 1`] = `
<div>
  <p
    className="badge"
  />
  <p
    className="atributes-text"
  >
    speed
  </p>
</div>
`;

exports[`should render a player´s attribute (strength) 1`] = `
<div>
  <p
    className="badge"
  />
  <p
    className="atributes-text"
  >
    strength
  </p>
</div>
`;
